Merge trunk into dtec branch
git-svn-id: svn://svn.code.sf.net/p/x10/code/branches/dtec@27659 a326200e-df2c-42e0-81fa-597e909af41d